--- a/index.html
+++ b/index.html
@@ -3,32 +3,79 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | shoot</title>
+    <title>Unity WebGL Player | WebglTest</title>
+    
+    <!-- 새로 추가한 부분 시작 -->
+    <link rel="stylesheet" href="./TemplateData/style.css" />
+    <!-- 새로 추가한 부분 끝 -->
+
   </head>
   <body style="text-align: center">
+
+    <!-- 새로 추가한 부분 시작-->
+    <div
+      id="unity-container"
+      class="unity-desktop"
+      style="width: 100%; height: 100%"
+    >
+      <canvas id="unity-canvas"></canvas>
+    </div>
+
     <script>
-        var canvas = document.querySelector("#unity-canvas");
+      var buildUrl = "PC";
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        buildUrl = "Mobile";
+      }
+      
+      var container = document.querySelector("#unity-container");
+      var canvas = document.querySelector("#unity-canvas");
+      var loader = document.querySelector("#loading-screen");
+
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        container.className = "unity-mobile";
+        config.devicePixelRatio = 2;
+        if (window.devicePixelRatio < 2) {
+          config.devicePixelRatio = 1;
+        }
+      } else {
         canvas.style.width = "100%";
         canvas.style.height = "100%";
-    </script>
-    <script src="Build/web.loader.js"></script>
-    <script>
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
       }
 
+      var script = document.createElement("script");
+      script.src = loaderUrl;
+      script.onload = () => {
+        createUnityInstance(canvas, config, (progress) => {})
+          .then((unityInstance) => {
+            this.unityInstance = unityInstance;
+            const x = document.getElementById("tip-first");
+            x.style.display = "block";
+            loader.style.display = "none";
+          })
+          .catch((message) => {
+            alert(message);
+          });
+      };
+      document.body.appendChild(script);
+
+      hello();
+      document.body.addEventListener("touchstart", tapped, false);
+      document.body.addEventListener("click", tapped, false);
+    </script>
+    <!-- 새로 추가한 부분 끝-->
+
+
+
+    <script src="Build/WebglTest.loader.js"></script>
+    <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/web.data",
-        frameworkUrl: "Build/web.framework.js",
-        codeUrl: "Build/web.wasm",
+        dataUrl: "Build/WebglTest.data",
+        frameworkUrl: "Build/WebglTest.framework.js",
+        codeUrl: "Build/WebglTest.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "MNJ",
-        productName: "shoot",
-        productVersion: "1.0",
+        companyName: "DefaultCompany",
+        productName: "WebglTest",
+        productVersion: "0.1",
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
         // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
